fixes and enhancements

--- a/cat-q.html
+++ b/cat-q.html
@@ -427,17 +427,24 @@
         </div>
         <hr>
     </div>
-    <div class="features-container">
-        <h2 class="text-center mb-4"><i class="fas fa-question-circle text-primary me-2"></i>Ce oferă platforma <strong>TestAutism.ro</strong> pentru <strong>Testare Autism Online la Adulți</strong>?</h2>
+    <div class="features-container premium-features" id="enhanced-features">
+        <div class="features-header position-relative overflow-hidden">
+            <div class="header-accent-line"></div>
+            <h2 class="text-center mb-5 position-relative">
+                <span class="gradient-text">Ce oferă platforma <strong>TestAutism.ro</strong> pentru <strong>Testare Autism Online la Adulți</strong>?</span>
+            </h2>
+        </div>
+
         <div class="row g-4">
             <!-- Privacy Feature -->
             <div class="col-12 col-md-4">
-                <div class="feature-card h-100">
-                    <div class="feature-icon">
-                        <i class="fas fa-user-secret text-primary fa-3x"></i>
+                <div class="premium-card h-100">
+                    <div class="card-top-accent privacy-accent"></div>
+                    <div class="premium-icon-wrapper">
+                        <i class="fas fa-user-secret text-primary fa-2x"></i>
                     </div>
-                    <h3 class="feature-title">Confidențialitate</h3>
-                    <p class="feature-text">
+                    <h3 class="premium-title">Confidențialitate</h3>
+                    <div class="premium-content">
                         <div class="privacy-features">
                             <div class="privacy-item">
                                 <i class="fas fa-check-circle text-success me-2"></i>
@@ -451,49 +458,53 @@
                                 <i class="fas fa-store-slash text-danger me-2"></i>
                                 NU stocăm informații personale. NU utilizăm cookies.
                             </div>
-                            <div class="privacy-item">
-                                <i class="fas fa-brands fa-github text-warning me-2"></i>
-                                Cod sursă transparent și disponibil GRATUIT pe <a style="display: inline;" href="https://github.com/hodorogandrei/testautism" target="_blank">Github</a>
+                            <div class="privacy-item github-feature">
+                                <i class="fab fa-github text-dark me-2"></i>
+                                Cod sursă transparent și disponibil GRATUIT
+                                <a href="https://github.com/hodorogandrei/testautism" target="_blank" class="github-button text-center">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
                             </div>
                         </div>
-                    </p>
+                    </div>
                 </div>
             </div>
 
             <!-- Facebook Share Feature -->
             <div class="col-12 col-md-4">
-                <div class="feature-card h-100">
-                    <div class="feature-icon">
-                        <i class="fab fa-facebook text-primary fa-3x"></i>
+                <div class="premium-card h-100">
+                    <div class="card-top-accent facebook-accent"></div>
+                    <div class="premium-icon-wrapper">
+                        <i class="fab fa-facebook text-primary fa-2x"></i>
                     </div>
-                    <h3 class="feature-title">Share pe Facebook</h3>
-                    <p class="feature-text">
-                        Împărtășește cu mândrie descoperirile tale! Dă share la scorul tău dacă ai aflat că ai putea fi autist! 🌟
-                        <br><br>
-                        <span class="feature-note">
+                    <h3 class="premium-title">Share pe Facebook</h3>
+                    <div class="premium-content">
+                        <p>Împărtășește cu mândrie descoperirile tale! Dă share la scorul tău dacă ai aflat că ai putea fi autist! <span class="emoji-sparkle">🌟</span></p>
+                        <div class="feature-note">
                             <i class="fas fa-info-circle text-info me-1"></i>
                             Opțiune disponibilă după finalizarea testului. Imaginile partajate sunt generate pe server și stocate doar <b>temporar</b> pentru a putea fi partajate către Facebook. Acestea NU sunt legate în vreun fel de identitatea ta personală.
-                        </span>
-                    </p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <!-- PDF Export Feature -->
             <div class="col-12 col-md-4">
-                <div class="feature-card h-100">
-                    <div class="feature-icon">
-                        <i class="fas fa-file-pdf text-danger fa-3x"></i>
+                <div class="premium-card h-100">
+                    <div class="card-top-accent pdf-accent"></div>
+                    <div class="premium-icon-wrapper">
+                        <i class="fas fa-file-pdf text-danger fa-2x"></i>
                     </div>
-                    <h3 class="feature-title">Export în PDF</h3>
-                    <p class="feature-text">
-                        Descarcă și păstrează scorul total, subscorurile, și răspunsurile la întrebări. Poți genera un PDF cu toate acestea, marcat cu data efectuării testului, pentru a-l revizui ulterior sau discuta cu profesioniștii calificați.
-                        <br><br>
-                        <span class="feature-note">
+                    <h3 class="premium-title">Export în PDF</h3>
+                    <div class="premium-content">
+                        <p>Descarcă și păstrează scorul total, subscorurile, și răspunsurile la întrebări. Poți genera un PDF cu toate acestea, marcat cu data efectuării testului, pentru a-l revizui ulterior sau discuta cu profesioniștii calificați.</p>
+                        <div class="feature-note">
                             <i class="fas fa-info-circle text-info me-1"></i>
                             Opțiune disponibilă după finalizarea testului.
-                            <i class="fas fa-laptop text-success me-1"></i> PDF-urile sunt generate <b>local</b>, pe dispozitivul tău. <i class="fas fa-shield-alt text-warning me-1"></i>. <b>NU</b> stocăm PDF-urile generate.
-                        </span>
-                    </p>
+                            <span class="device-note"><i class="fas fa-laptop text-success me-1"></i> PDF-urile sunt generate <b>local</b>, pe dispozitivul tău.</span>
+                            <span class="security-note"><i class="fas fa-shield-alt text-warning me-1"></i> <b>NU</b> stocăm PDF-urile generate.</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
