--- a/index.html
+++ b/index.html
@@ -212,8 +212,6 @@
 
     <div class="initial-section justify-content-center">
         <h1 class="text-center mt-4 mb-3" style="font-size: 1.3rem; font-weight: bold;">Test de Autoevaluare Autism Adulți Online cu Scalele RAADS-R (Ritvo Autism Asperger Diagnostic Scale - Revised) și CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
-        <h2 class="text-center mb-3" style="font-size: 1.3rem; color: #1976D2;">Autismul la adulți – simptome, autoevaluare și diagnostic</h2>
-
         <p>
             Acest <strong>test de autism pentru adulți</strong> (disponibil online, în limba română) oferă un prim pas spre <strong>diagnostic</strong>. Versiunea revizuită (RAADS-R) a <strong>Scalei Ritvo Autism Asperger Diagnostic Scale (RAADS)</strong> este un <strong>instrument orientativ, dar precis</strong>, pentru screening-ul <strong>trăsăturilor autiste la adulți</strong>. Întrebările au fost restructurate pe baza feedback-ului <b>comunității autiste</b> și al unor profesioniști precum <strong>Dr. Natalie Engelbrecht</strong>. Testul constă în <strong>80 de afirmații</strong> pentru screening-ul autismului la adulții care pot <b>„scăpa de sub radarul diagnostic"</b>, din cauza unei prezentări <strong>aparent subclinice.</strong>
         </p>
@@ -268,6 +266,7 @@
                 </div>
             </div>
         </div>
+        <h2 class="text-center mb-3" style="font-size: 1.3rem; color: #1976D2;">Autismul la adulți – trăsături și autoevaluare - un prim pas către diagnostic</h2>
         <div class="empathetic-intro">
           <p>Te-ai întrebat vreodată dacă ai putea fi autist(ă)? Nu ești singur(ă). Tot mai mulți adulți descoperă răspunsuri la întrebări pe care și le-au pus toată viața.</p>
         </div>
