--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
     </div>
 
     <div class="initial-section justify-content-center">
-        <h1 class="text-center mt-4 mb-3" style="font-size: 1.3rem; font-weight: bold;">Test de Autoevaluare Autism Adulți Online cu Scalele RAADS-R (Ritvo Autism Asperger Diagnostic Scale - Revised) și CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
+        <h1 class="text-center mt-4 mb-3" style="font-size: 1.3rem; font-weight: bold;">Teste de Autoevaluare Autism la Adulți Online, cu scalele RAADS-R (Ritvo Autism Asperger Diagnostic Scale - Revised) și CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
         <p>
-            Acest <strong>test de autism pentru adulți</strong> (disponibil online, în limba română) oferă un prim pas spre <strong>diagnostic</strong>. Versiunea revizuită (RAADS-R) a <strong>Scalei Ritvo Autism Asperger Diagnostic Scale (RAADS)</strong> este un <strong>instrument orientativ, dar precis</strong>, pentru screening-ul <strong>trăsăturilor autiste la adulți</strong>. Întrebările au fost restructurate pe baza feedback-ului <b>comunității autiste</b> și al unor profesioniști precum <strong>Dr. Natalie Engelbrecht</strong>. Testul constă în <strong>80 de afirmații</strong> pentru screening-ul autismului la adulții care pot <b>„scăpa de sub radarul diagnostic"</b>, din cauza unei prezentări <strong>aparent subclinice.</strong>
+            Testul <strong>RAADS-R</strong> pentru autism la adulți (disponibil online, în limba română) oferă un prim pas spre <strong>diagnostic</strong>. Versiunea revizuită (RAADS-R) a <strong>Scalei Ritvo Autism Asperger Diagnostic Scale (RAADS)</strong> este un <strong>instrument orientativ, dar precis</strong>, pentru screening-ul <strong>trăsăturilor autiste la adulți</strong>. Întrebările au fost restructurate pe baza feedback-ului <b>comunității autiste</b> și al unor profesioniști precum <strong>Dr. Natalie Engelbrecht</strong>. Testul constă în <strong>80 de afirmații</strong> pentru screening-ul autismului la adulții care pot <b>„scăpa de sub radarul diagnostic"</b>, din cauza unei prezentări <strong>aparent subclinice.</strong>
         </p>
 
         <div class="row">
@@ -437,7 +437,7 @@
     <div class="section-divider d-md-none"></div>
     <!-- FAQ Section with Stylish SEO-Friendly Accordions -->
     <div class="faq-section container my-5" id="section-faq">
-        <h2 class="text-center mb-4">Întrebări frecvente despre testul pentru autism la adulți RAADS-R</h2>
+        <h2 class="text-center mb-4" style="font-size: 1.3rem;">Întrebări frecvente despre testul pentru autism la adulți RAADS-R</h2>
 
         <div class="row justify-content-center">
             <div class="col-lg-10">
