--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </div>
 
     <div class="initial-section justify-content-center">
-        <h1 class="text-center mt-4 mb-3" style="font-size: 1.3rem; font-weight: bold;">Teste de Autoevaluare Autism la Adulți Online, cu scalele RAADS-R (Ritvo Autism Asperger Diagnostic Scale - Revised) și CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
+        <h1 class="text-center mt-4 mb-3" style="font-size: 1.3rem; font-weight: bold;">Teste de Autoevaluare Autism la Adulți Online: RAADS-R (Ritvo Autism Asperger Diagnostic Scale - Revised) și CAT-Q (Camouflaging Autistic Traits Questionnaire)</h1>
         <p>
             Testul <strong>RAADS-R</strong> pentru autism la adulți (disponibil online, în limba română) oferă un prim pas spre <strong>diagnostic</strong>. Versiunea revizuită (RAADS-R) a <strong>Scalei Ritvo Autism Asperger Diagnostic Scale (RAADS)</strong> este un <strong>instrument orientativ, dar precis</strong>, pentru screening-ul <strong>trăsăturilor autiste la adulți</strong>. Întrebările au fost restructurate pe baza feedback-ului <b>comunității autiste</b> și al unor profesioniști precum <strong>Dr. Natalie Engelbrecht</strong>. Testul constă în <strong>80 de afirmații</strong> pentru screening-ul autismului la adulții care pot <b>„scăpa de sub radarul diagnostic"</b>, din cauza unei prezentări <strong>aparent subclinice.</strong>
         </p>
