--- a/cat-q.html
+++ b/cat-q.html
@@ -28,7 +28,7 @@
 <meta property="og:title" content="Test Autism Adulți: Ritvo Autism Asperger Diagnostic Scale - Revised (RAADS-R) și Camouflage Autistic Traits Questionnaire (CAT-Q)" />
 <meta property="og:description" content="Test de Autoevaluare Autism (Spectru Autist - TSA) adulți. RAADS-R și CAT-Q pot oferi identificări cu precizie a trăsăturilor autiste" />
 <meta property="og:url" content="https://www.testautism.ro" />
-<meta property="og:image" content="https://www.suntautist.ro/content/images/2024/11/raads-r-tris.jpg" />
+<meta property="og:image" content="https://www.testautism.ro/images/cat-q.jpg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="675" />
 
@@ -42,7 +42,7 @@
 <meta name="twitter:title" content="Test Autism Adulți: Ritvo Autism Asperger Diagnostic Scale - Revised (RAADS-R)" />
 <meta name="twitter:description" content="Test de Autoevaluare autism (Spectru Autist - TSA) la adulți. RAADS-R și CAT-Q pot oferi identificări cu precizie a trăsăturilor autiste." />
 <meta name="twitter:url" content="https://www.testautism.ro" />
-<meta name="twitter:image" content="https://www.suntautist.ro/content/images/2024/11/raads-r-tris.jpg" />
+<meta name="twitter:image" content="https://www.testautism.ro/images/cat-q.jpg" />
 
 <!-- Structured Data: FAQ Page Schema -->
 <script type="application/ld+json">
