--- a/cat-q.html
+++ b/cat-q.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Test Autism Adulți: Ritvo Autism Asperger Diagnostic Scale - Revised (RAADS-R) și Camouflage Autistic Traits Questionnaire (CAT-Q)" />
 <meta property="og:description" content="Test de Autoevaluare Autism (Spectru Autist - TSA) adulți. RAADS-R și CAT-Q pot oferi identificări cu precizie a trăsăturilor autiste" />
-<meta property="og:url" content="https://www.testautism.ro" />
+<meta property="og:url" content="https://www.testautism.ro/cat-q" />
 <meta property="og:image" content="https://www.testautism.ro/images/cat-q.jpg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="675" />
@@ -41,7 +41,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Test Autism Adulți: Ritvo Autism Asperger Diagnostic Scale - Revised (RAADS-R)" />
 <meta name="twitter:description" content="Test de Autoevaluare autism (Spectru Autist - TSA) la adulți. RAADS-R și CAT-Q pot oferi identificări cu precizie a trăsăturilor autiste." />
-<meta name="twitter:url" content="https://www.testautism.ro" />
+<meta name="twitter:url" content="https://www.testautism.ro/cat-q" />
 <meta name="twitter:image" content="https://www.testautism.ro/images/cat-q.jpg" />
 
 <!-- Structured Data: FAQ Page Schema -->
