separation of progress-bar.css into a separate file

--- a/cat-q.html
+++ b/cat-q.html
@@ -183,6 +183,7 @@
 <noscript>Vă rugăm să vă asigurați că Javascript este activat pentru scopuri de <a href="https://userway.org">accesibilitate a site-ului web.</a></noscript>
 
 <link rel="stylesheet" type="text/css" href="custom-style.css">
+<link rel="stylesheet" type="text/css" href="progress-bar.css">
 
 </head>
 <body>
