--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <!-- Save Indicator -->
             <div class="save-indicator" aria-live="polite">
-                <i class="fas fa-cloud-upload-alt save-indicator-icon"></i>
+                <i class="fas fa-floppy-disk save-indicator-icon"></i>
                 <span class="save-indicator-text">Salvat 02:38</span>
             </div>
         </div>
