T&Cs: fixed fontawesome inclusion and back to top icon

--- a/termeni-si-conditii.html
+++ b/termeni-si-conditii.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termeni și Condiții - testautism.ro</title>
     <meta name="description" content="Termenii și condițiile de utilizare pentru platforma testautism.ro, care oferă chestionare online de autoevaluare pentru trăsături din spectrul autist.">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* CSS Reset and Base Styles */
         :root {
