terms and conditions banner - first version

--- a/index.html
+++ b/index.html
@@ -176,6 +176,28 @@
 <a href="#main-content" class="sr-only sr-only-focusable">Sari la conținut</a>
 
 <div class="container" id="main-content">
+    <!-- Terms and Conditions Banner - Desktop Only -->
+    <div id="terms-banner" class="terms-banner" role="alert" aria-live="polite">
+        <div class="terms-content">
+            <div class="terms-icon">
+                <i class="fas fa-info-circle"></i>
+            </div>
+            <div class="terms-text">
+                <p>Folosind acest site, accepți <a href="termeni-si-conditii.html" class="terms-link">Termenii și Condițiile</a> noastre.</p>
+            </div>
+            <div class="terms-actions">
+                <button id="terms-understand" class="terms-understand" aria-label="Am înțeles">
+                    Am înțeles
+                </button>
+                <button id="terms-dismiss" class="terms-dismiss" aria-label="Închide notificarea">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="terms-keyboard-hint">
+            <span class="keyboard-shortcut" id="keyboard-hint-text">Apasă <kbd>Alt</kbd> + <kbd>A</kbd> pentru a accepta sau <kbd>Esc</kbd> pentru a închide</span>
+        </div>
+    </div>
     <div id="quick-nav" class="quick-nav-container">
         <ul class="quick-nav">
             <li>
