Align homepage CTA buttons

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="row">
             <!-- Stylish RAADS-R Button with animations and effects -->
             <div class="col-xs-12 col-sm-6">
-                <div class="cta-button-wrapper">
+                <div class="cta-button-wrapper mb-4 d-flex justify-content-center">
                     <div class="cta-emphasis">
                         <a id="start-test" href="#first-disclaimer" class="cta-button pulse">
                             <i class="fas fa-clipboard-list"></i>
