Enhance nav and progress layout

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                     <span>Rezultate<br>RAADS-R</span>
                 </a>
             </li>
+            <li>
+                <a href="#section-contact" class="quick-nav-item">
+                    <i class="fas fa-hands-helping"></i>
+                    <span>Suport<br>Contact</span>
+                </a>
+            </li>
         </ul>
     </div>
 
@@ -1553,7 +1559,7 @@
     </div>
     <div class="section-divider d-md-none mb-5"></div>
     <!-- Contact Section -->
-    <div class="contact-section mb-5">
+    <div class="contact-section mb-5" id="section-contact">
         <div class="contact-card">
             <h4>
                 <i class="fas fa-info-circle text-primary me-2"></i>
