--- a/cat-q.html
+++ b/cat-q.html
@@ -249,6 +249,12 @@
                     <span>Rezultate<br>CAT-Q</span>
                 </a>
             </li>
+            <li>
+                <a href="#section-contact" class="quick-nav-item">
+                    <i class="fas fa-hands-helping"></i>
+                    <span>Suport<br>Contact</span>
+                </a>
+            </li>
         </ul>
     </div>
 
@@ -2443,7 +2449,7 @@
     </div>
     <div class="section-divider d-md-none mb-5"></div>
     <!-- Contact Section -->
-    <div class="contact-section mb-5">
+    <div class="contact-section mb-5" id="section-contact">
         <div class="contact-card">
             <h4>
                 <i class="fas fa-info-circle text-primary me-2"></i>
